# pyconfig

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  TODO.txt  localconfig.py  pyconfig.py  pyproject.toml  setup.py
.cursor/rules/: .gitignore  github-actions.mdc  markdown-documentation.mdc  python-development.mdc  python-testing.mdc  version-control.mdc  version-management.mdc
pyconfig/: __init__.py  scripts.py
script/: docs
test/: test_config.py  test_etcd.py  test_scripts.py
test/ssl/: cacert.pem  client.crt  client.key  server.crt  server.key
test1/: pyproject.toml  setup.py  test1.py
test2/: pyproject.toml  setup.py  test2.py
