[project]
name = "pyconfig"
version = "3.3.0"
description = "Python-based singleton configuration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jacob Alheid", email = "shakefu@gmail.com"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "pytool>=6.0.3",
    "simplejson >=3.19.2, <4.0.0",
]

[project.scripts]
pyconfig = "pyconfig.scripts:main"

[dependency-groups]
etcd = [
    "python-etcd>=0.4.5",
]
dev = [
    "configargparse >=1.7, <2.0",
    "coverage >=6.5.0, <7.0.0",
    "coveralls >=3.3.1, <4.0.0",
    "pre-commit >=4.2.0, <5.0.0",
    "pytest >=8.4.0, <9.0.0",
    "pytest-cov >=4.1.0, <5.0.0",
    "pytest-mock >=3.14.0, <4.0.0",
    "ruff>=0.12.0",
]
docs = [
]

# This is required so setuptools doesn't see "script" as a package
[tool.setuptools]
packages = ["pyconfig"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
source = ["pyconfig"]
